// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тест Button Тест кнопки без текста 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Тест Button Тест кнопки с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  type="button"
>
  <p
    className="text undefined"
  >
    Кнопка
  </p>
</button>
`;

exports[`Тест Button Тест с заблокированной кнопкой 1`] = `
<button
  className="text text_type_button text_color_primary button undefined false "
  disalbed={true}
  type="button"
>
  <p
    className="text undefined"
  />
</button>
`;

exports[`Тест Button Тест с загрузкой 1`] = `
<button
  className="text text_type_button text_color_primary button undefined loader "
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;
